--- a/Safaps_code/app/config/routing.yml
+++ b/Safaps_code/app/config/routing.yml
@@ -1,3 +1,7 @@
+api:
+    resource: "@ApiBundle/Resources/config/routing.yml"
+    prefix:   /
+
 model:
     resource: "@ModelBundle/Resources/config/routing.yml"
     prefix:   /
